--- a/pages/soh6/451915.md
+++ b/pages/soh6/451915.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="美國聯邦最高法院。（Patrick Semansky/AP）" src="https://img.soundofhope.org/2020-12/1607524189826.jpg"/>
+<div><img alt="美国联邦最高法院。（Patrick Semansky/AP）" src="https://img.soundofhope.org/2020-12/1607524189826.jpg"/>
 <br/><figcaption class="caption">
- 美國聯邦最高法院。（Patrick Semansky/AP）
+ 美国联邦最高法院。（Patrick Semansky/AP）
 </figcaption></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -17,31 +17,31 @@
 <div><div class="Content__Wrapper sc-1bvya0-0 grZQxZ">
  <p class="meta-top">
   <span class="meta">
-   【希望之聲2020年12月9日】（本台記者仲軒綜合報導）
+   【希望之声2020年12月9日】（本台记者仲軒综合报导）
   </span>
-  繼德州向最高法院提起訴訟，指控4大搖擺州（喬州、賓州、威州、密西根州）違憲修改選舉法規後，12月9日，已有17個州相繼跟進，加入德州的控訴行列。最高法院也規定，四個搖擺州必須在12月10日下午3點前提交辯護狀。
+  继德州向最高法院提起诉讼，指控4大摇摆州（乔州、宾州、威州、密西根州）违宪修改选举法规后，12月9日，已有17个州相继跟进，加入德州的控诉行列。最高法院也规定，四个摇摆州必须在12月10日下午3点前提交辩护状。
  </p>
  <p>
-  截至12月9日下午3時，美國密蘇里州和其它16個州提交訴狀，支持德克薩斯州推遲總統選舉人任命的訴訟。
+  截至12月9日下午3时，美国密苏里州和其它16个州提交诉状，支持德克萨斯州推迟总统选举人任命的诉讼。
  </p>
  <div class="AD_Embed__Wrap-sc-1xslmin-0 igMuqX module desktop">
   <div>
   </div>
  </div>
  <p>
-  這17州分別是：阿拉巴馬州、阿肯色州、佛羅里達州、印第安納州、堪薩斯州、路易斯安那州、密西西比州、密蘇里州、蒙大拿州、內布拉斯加州、北達科他州、俄克拉荷馬州、南卡羅來納州、南達科他州、田納西州、猶他州和西弗吉尼亞州。
+  这17州分别是：阿拉巴马州、阿肯色州、佛罗里达州、印第安纳州、堪萨斯州、路易斯安那州、密西西比州、密苏里州、蒙大拿州、内布拉斯加州、北达科他州、俄克拉荷马州、南卡罗来纳州、南达科他州、田纳西州、犹他州和西弗吉尼亚州。
  </p>
  <p>
-  密蘇里州總檢察長埃裏克·施密特9日發出一份聲明說：「選舉的誠信對於維護共和國至關重要，無論是說今天還是未來的選舉。」
+  密苏里州总检察长埃里克·施密特9日发出一份声明说：「选举的诚信对于维护共和国至关重要，无论是说今天还是未来的选举。」
  </p>
  <p>
-  這份17州總檢察長聯名的訴狀是一份正式的申訴許可動議，同時動議還警告說，州行政部門和司法部門頒佈的法令使各州的選舉面臨潛在的欺詐問題。
+  这份17州总检察长联名的诉状是一份正式的申诉许可动议，同时动议还警告说，州行政部门和司法部门颁布的法令使各州的选举面临潜在的欺诈问题。
  </p>
  <p>
-  8日《自由時報》報導，密蘇里州、肯塔基州、路易斯安那州、密西西比州、南卡羅來納州、南達科他州、阿拉巴馬州、阿肯色州、印地安那州和佛羅里達州都加入支持德州的訴訟行列，指控4大搖擺州違反了憲法的“平等保護條款”。
+  8日《自由时报》报导，密苏里州、肯塔基州、路易斯安那州、密西西比州、南卡罗来纳州、南达科他州、阿拉巴马州、阿肯色州、印地安那州和佛罗里达州都加入支持德州的诉讼行列，指控4大摇摆州违反了宪法的“平等保护条款”。
  </p>
  <p>
-  川普總統在當時還只有8個州跟進時，就發推道：“這就是美國！現在加入針對GA、MI、PA和WI的TEXAS訴訟的是：阿拉巴馬州！阿肯色！佛羅里達！肯塔基！路易斯安那！密西西比！南卡羅來納！南達科他州！誰是下一個！”之後，印地安那州和密蘇里州也跟進了。
+  川普总统在当时还只有8个州跟进时，就发推道：“这就是美国！现在加入针对GA、MI、PA和WI的TEXAS诉讼的是：阿拉巴马州！阿肯色！佛罗里达！肯塔基！路易斯安那！密西西比！南卡罗来纳！南达科他州！谁是下一个！”之后，印地安那州和密苏里州也跟进了。
  </p>
  <div class="soh-embed">
   <div class="soh-embed-inner">
@@ -52,112 +52,112 @@
   </div>
  </div>
  <p>
-  川普律師塞庫洛（Jay Sekulow）說，此訴訟繞開地方法院，所以非常重要。如聯邦最高法院支持德州的訴訟，未來將由州立法機關來決定自己的選舉人，並將選舉人送往選舉人團。
+  川普律师塞库洛（Jay Sekulow）说，此诉讼绕开地方法院，所以非常重要。如联邦最高法院支持德州的诉讼，未来将由州立法机关来决定自己的选举人，并将选举人送往选举人团。
  </p>
  <p>
-  以下是希望之聲爲您整理的12月9日選情更新：
- </p>
- <h3>
-  總統就職典禮聯合委員會投票否認拜登就職
- </h3>
- <p>
-  週二（12月8日）在總統就職典禮聯合委員會（JCCIC）的所有三名共和黨人都投了反對票的情況下，最後決議案在3：3的情況下無法通過。
- </p>
- <p>
-  本屆委員會的議員包括：衆議院議長佩洛西（Nancy Pelosi）、民主黨蔘議員克洛布查爾（Amy Klobuchar）、民主黨衆議員霍爾（Snyy Hoyer）以及參議院多數黨領袖麥康奈爾（Mitch McConnell）、共和黨蔘議員布朗特（Roy Blunt）和衆議院共和黨領袖麥卡錫（Kevin McCarthy）。
- </p>
- <p>
-  布朗特在一份聲明中說，總統就職典禮委員會並不能在領先選舉進程的情況下，決定誰要在未來就職。
+  以下是希望之声为您整理的12月9日选情更新：
  </p>
  <h3>
-  專家：德州起訴4州的案件具重大意義
+  总统就职典礼联合委员会投票否认拜登就职
  </h3>
  <p>
-  美國民主研究所主任巴山姆（Patrick Basham）認爲，德州起訴四個搖擺州，對川普陣營是個好消息。“它增加了川普團隊訴訟的可信度。作爲法庭來說，他們會把德州總檢察長視爲一個很重要的原告。”
+  周二（12月8日）在总统就职典礼联合委员会（JCCIC）的所有三名共和党人都投了反对票的情况下，最后决议案在3：3的情况下无法通过。
  </p>
  <p>
-  《傳統基金會》法律學者史密斯 （Zack Smith）說：“最高法院有一種權力，叫初審管轄權。因此，各州可以要求最高院直接就此案件聆訊，如同初審法院一樣。”
+  本届委员会的议员包括：众议院议长佩洛西（Nancy Pelosi）、民主党参议员克洛布查尔（Amy Klobuchar）、民主党众议员霍尔（Snyy Hoyer）以及参议院多数党领袖麦康奈尔（Mitch McConnell）、共和党参议员布朗特（Roy Blunt）和众议院共和党领袖麦卡锡（Kevin McCarthy）。
  </p>
  <p>
-  《傳統基金會》法律中心主任麥爾肯 （John Malcolm）說：“德州提出的是非常重要的法律問題。其（核心）法律問題是，是否法官和行政官員可以改變該州選舉法律，而無須州立法機構贊成。”他還說：“我從未見過這樣的法律訴訟。但如果他們（最高院）就德州案做出裁決，且結果有利於德州，可以想像這將改變大選結果。”
+  布朗特在一份声明中说，总统就职典礼委员会并不能在领先选举进程的情况下，决定谁要在未来就职。
  </p>
  <h3>
-  翟東昇視頻熱傳 川普也轉推
+  专家：德州起诉4州的案件具重大意义
  </h3>
  <p>
-  習近平智庫、中共對外戰略研究中心副主任兼祕書長翟東昇自曝中共利用砸錢手段，收買華爾街，同時搞定拜登家族的視頻被熱推後遭刪，反而更加引起熱議，而川普也轉推了。
+  美国民主研究所主任巴山姆（Patrick Basham）认为，德州起诉四个摇摆州，对川普阵营是个好消息。“它增加了川普团队诉讼的可信度。作为法庭来说，他们会把德州总检察长视为一个很重要的原告。”
+ </p>
+ <p>
+  《传统基金会》法律学者史密斯 （Zack Smith）说：“最高法院有一种权力，叫初审管辖权。因此，各州可以要求最高院直接就此案件聆讯，如同初审法院一样。”
+ </p>
+ <p>
+  《传统基金会》法律中心主任麦尔肯 （John Malcolm）说：“德州提出的是非常重要的法律问题。其（核心）法律问题是，是否法官和行政官员可以改变该州选举法律，而无须州立法机构赞成。”他还说：“我从未见过这样的法律诉讼。但如果他们（最高院）就德州案做出裁决，且结果有利于德州，可以想像这将改变大选结果。”
+ </p>
+ <h3>
+  翟东升视频热传 川普也转推
+ </h3>
+ <p>
+  习近平智库、中共对外战略研究中心副主任兼秘书长翟东升自曝中共利用砸钱手段，收买华尔街，同时搞定拜登家族的视频被热推后遭删，反而更加引起热议，而川普也转推了。
  </p>
  <div class="AD_Embed__Wrap-sc-1xslmin-0 igMuqX module desktop">
   <div>
   </div>
  </div>
  <p>
-  翟說：“在1992到2016年之間，中美之間各種問題都能搞得定。所有的事情，全部都是‘牀頭吵架牀尾合’，兩個月之內搞定...… 因爲咱們上邊有人，我們在美國的權勢核心圈，我們有我們的老朋友！” 他還說，但2016年以後就不行了，因爲他們搞不定川普。
+  翟说：“在1992到2016年之间，中美之间各种问题都能搞得定。所有的事情，全部都是‘床头吵架床尾合’，两个月之内搞定...… 因为咱们上边有人，我们在美国的权势核心圈，我们有我们的老朋友！” 他还说，但2016年以后就不行了，因为他们搞不定川普。
  </p>
  <p>
-  而福斯新聞主持人卡爾森評論道：“他（翟東昇）說華爾街拿川普沒辦法，但他們嘗試。這就說明一切了，如果你納悶，爲何美國政治圈會容許，中共政府影響美國 侵害人民。爲何他們容許中共政府從美國企業竊取數十億美元智慧財產權，這就是解答。川普對這羣政治圈既得利益者，形成一個巨大的障礙。”
- </p>
- <h3>
-  風水師：拜登命犯“庚子劫” 不是病房就是牢房
- </h3>
- <p>
-  有風水師預測，年事已高的拜登命犯“庚子劫”，不入病房即入牢房。還有風水師說，拜登搶到的不是總統“寶座”，而是庚子年的“魔咒”，拜登強行當選，很可能應驗北美土著人對美國總統的詛咒。
- </p>
- <p>
-  美國建國至今共經歷4個庚子年，而且都是美國總統大選之年。2020年也是庚子年，如同詛咒一般，此前3位在庚子年當選的美國總統，都離奇的死於任上。
- </p>
- <p>
-  拜登11月7日強行宣佈當選後，名爲“泰源”的命理師預測，拜登只是表面上的臨時勝利，迴光返照。12月以後會有衝動、不安、是非之事，拜登的好運也就結束了。
+  而福斯新闻主持人卡尔森评论道：“他（翟东升）说华尔街拿川普没办法，但他们尝试。这就说明一切了，如果你纳闷，为何美国政治圈会容许，中共政府影响美国 侵害人民。为何他们容许中共政府从美国企业窃取数十亿美元智慧财产权，这就是解答。川普对这群政治圈既得利益者，形成一个巨大的障碍。”
  </p>
  <h3>
-  川普：大法官和立法機關要勇敢的做正確的事
+  风水师：拜登命犯“庚子劫” 不是病房就是牢房
  </h3>
  <p>
-  川普總統12月8日在白宮呼籲，希望最高法院的大法官和立法機關有勇氣去做正確的事。他說：“讓我們看看有人是否有勇氣，無論是立法者還是立法機關，還是一名最高法院大法官，或是最高法院的多名法官。讓我們看看他們是否有勇氣去做這個國家每個人都認爲是正確的事情。”
+  有风水师预测，年事已高的拜登命犯“庚子劫”，不入病房即入牢房。还有风水师说，拜登抢到的不是总统“宝座”，而是庚子年的“魔咒”，拜登强行当选，很可能应验北美土著人对美国总统的诅咒。
  </p>
  <p>
-  川普表示：“我獲得了近7,500萬張選票，這是美國曆史上現任總統的最高票數……如果有人有勇氣，我知道下一屆政府將成爲誰的政府。
+  美国建国至今共经历4个庚子年，而且都是美国总统大选之年。2020年也是庚子年，如同诅咒一般，此前3位在庚子年当选的美国总统，都离奇的死于任上。
+ </p>
+ <p>
+  拜登11月7日强行宣布当选后，名为“泰源”的命理师预测，拜登只是表面上的临时胜利，回光返照。12月以后会有冲动、不安、是非之事，拜登的好运也就结束了。
  </p>
  <h3>
-  法學教授：副總統彭斯有權拒絕有爭議的選舉人選票
+  川普：大法官和立法机关要勇敢的做正确的事
  </h3>
  <p>
-  美國媒體“Just the News”12月8日報導，加州大學伯克利分校（University of California-Berkeley）法學教授柳（John Yoo）和聖托馬斯大學（St. Thomas University）法學教授德拉亨蒂（Robert J. Delahunty）近日發文，認爲根據美國憲法第12條修正案，彭斯作爲國會聯席會議（Joint Session of Congress）的主持者，可以拒絕計入大選存在爭議州的選舉人票。
+  川普总统12月8日在白宫呼吁，希望最高法院的大法官和立法机关有勇气去做正确的事。他说：“让我们看看有人是否有勇气，无论是立法者还是立法机关，还是一名最高法院大法官，或是最高法院的多名法官。让我们看看他们是否有勇气去做这个国家每个人都认为是正确的事情。”
  </p>
  <p>
-  兩位教授認爲，檢查計票中的錯誤或欺詐是副總統當着國會議員的面公開要做的事。如果計算選舉人選票是副總統的責任，那麼，判斷這些選票是否有效的責任也應由副總統來承擔，這是密不可分的。
+  川普表示：“我获得了近7,500万张选票，这是美国历史上现任总统的最高票数……如果有人有勇气，我知道下一届政府将成为谁的政府。
  </p>
  <h3>
-  朱利安尼神速康復 今天或出院
+  法学教授：副总统彭斯有权拒绝有争议的选举人选票
  </h3>
  <p>
-  76歲的前紐約市長朱利安尼（Rudy Giuliani）12月8日表示，他現在感覺好轉，並預計週三（12月9日）出院。朱利安尼還透露，他接受的治療方法和川普總統之前的療法相同。他說：“我認爲他們會讓我明天早上出院。”
+  美国媒体“Just the News”12月8日报导，加州大学伯克利分校（University of California-Berkeley）法学教授柳（John Yoo）和圣托马斯大学（St. Thomas University）法学教授德拉亨蒂（Robert J. Delahunty）近日发文，认为根据美国宪法第12条修正案，彭斯作为国会联席会议（Joint Session of Congress）的主持者，可以拒绝计入大选存在争议州的选举人票。
  </p>
  <p>
-  朱利安尼說：“他（川普）的醫生把我送到了這裏。是他說服了我。我真的不想去醫院，他說：‘別傻了，如果我們送你去醫院，三天之內就可以解決。’”
+  两位教授认为，检查计票中的错误或欺诈是副总统当着国会议员的面公开要做的事。如果计算选举人选票是副总统的责任，那么，判断这些选票是否有效的责任也应由副总统来承担，这是密不可分的。
+ </p>
+ <h3>
+  朱利安尼神速康复 今天或出院
+ </h3>
+ <p>
+  76岁的前纽约市长朱利安尼（Rudy Giuliani）12月8日表示，他现在感觉好转，并预计周三（12月9日）出院。朱利安尼还透露，他接受的治疗方法和川普总统之前的疗法相同。他说：“我认为他们会让我明天早上出院。”
  </p>
  <p>
-  白宮醫生康利對媒體表示，川普確診後注射了美國再生元製藥公司的“多株抗體雞尾酒療法”一劑。作爲“預防措施”，之後，川普還使用了美國生物製藥吉利德科學公司研發的實驗性抗病毒藥物“瑞德西韋”。
+  朱利安尼说：“他（川普）的医生把我送到了这里。是他说服了我。我真的不想去医院，他说：‘别傻了，如果我们送你去医院，三天之内就可以解决。’”
  </p>
  <p>
-  相關文章鏈接：
+  白宫医生康利对媒体表示，川普确诊后注射了美国再生元制药公司的“多株抗体鸡尾酒疗法”一剂。作为“预防措施”，之后，川普还使用了美国生物制药吉利德科学公司研发的实验性抗病毒药物“瑞德西韦”。
+ </p>
+ <p>
+  相关文章链接：
  </p>
  <h3>
   <ok href="https://www.soundofhope.org/post/451579">
-   【選情更新12/8】路易斯安那州加入德州訴四搖擺州案
+   【选情更新12/8】路易斯安那州加入德州诉四摇摆州案
   </ok>
  </h3>
  <h3>
   <ok href="https://www.soundofhope.org/post/451246">
-   【選情更新12/7】川普誓言徹底修復美國選舉系統 鮑威爾喬州案將上訴
+   【选情更新12/7】川普誓言彻底修复美国选举系统 鲍威尔乔州案将上诉
   </ok>
   <br/>
  </h3>
  <p class="meta-btm">
-  責任編輯：張莉莉
+  责任编辑：張莉莉
  </p>
  <p class="meta-btm">
-  本文章或節目經希望之聲編輯製作，轉載請註明希望之聲幷包含原文標題及鏈接。
+  本文章或节目经希望之声编辑制作，转载请注明希望之声并包含原文标题及链接。
  </p>
 </div>
 </div>
