--- a/pages/p6/932501.md
+++ b/pages/p6/932501.md
@@ -1,4 +1,4 @@
-### 江苏大学生坠楼亡 其父称校方反应蹊跷(组图)
+### 揭密：英军为何能在黑夜准确击落纳粹飞机？(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="江苏大学一名大三生坠楼身亡后，其父发文质问校方为何“在事发后四小时强行监禁毫不知情的死者母亲”，以及该案有何隐情" src="https://img3.secretchina.com/pic/2020/10-16/p2797661a357481632-ss.jpg"/>
+  <img alt="英俊战士战斗机。" src="https://img3.secretchina.com/pic/2020/1-5/p2597831a839975789-ss.jpg"/>
   <br>
-   江苏大学一名大三生坠楼身亡后，其父发文质问校方为何“在事发后四小时强行监禁毫不知情的死者母亲”，以及该案有何隐情。
+   英俊战士战斗机。（图片来源：公有领域）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,25 +21,30 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月16日讯】（看中国记者卢乙欣综合报导）
+  1940年10月开始，
   <strong>
-   江苏大学
-  </strong>
-  15日通报，该校食品与生物工程学院一名学生从主A楼6楼卫生间
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/坠楼" target="_blank">
-    坠楼
+   <span href="https://www.secretchina.com/news/gb/tag/纳粹" target="_blank">
+    纳粹
    </span>
+   德军
   </strong>
-  身亡；警方调查已“排除他杀”。但学生父亲15日晚间却在微博发文强调，死者生前与母亲在相处时言行举止均如常，而其逝世后，“手机里的资料被人为删除”；他又质问校方为何“在事发后四小时强行监禁毫不知情的死者母亲”及这起坠楼案有何隐情？
+  对
+  <strong>
+   英国
+  </strong>
+  展开夜间轰炸，起初由于英军战机夜战能力有限，德军轰炸机几乎为所欲为。但渐渐地，德国
+  <strong>
+   飞行员
+  </strong>
+  发现日子越来越难过，英国飞行员似乎都长了一双“猫眼”，能在黑夜里准确发现并击落德机，这到底是为什么呢？
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
@@ -47,31 +52,83 @@
  </p>
  <p>
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/江苏大学" target="_blank">
-    江苏大学
-   </span>
-   学生坠楼亡 警方称“
+   胡萝卜“造就”空中英雄？
   </strong>
+ </p>
+ <p>
+  对于这个问题，不光德军想知道答案，英国老百姓也想知道。于是，负责食物供给的英国官员站出来，宣称皇家
+  <span href="https://www.secretchina.com/news/gb/tag/空军" target="_blank">
+   空军
+  </span>
+  飞行员吃了大量胡萝卜，正是其中的维生素使得他们的视力变得异常锐利。
+ </p>
+ <p>
+  吃胡萝卜能当英雄，还有什么比这套说辞能让英国人停止抱怨肉食不够，转而心甘情愿地大嚼胡萝卜呢！一时间，伦敦街头巷尾，大家都在谈论胡萝卜的“丰功伟绩”。德国人虽然半信半疑，但也不得不接受这一解释。德国科学家认为，胡萝卜中含有大量有利于视力的维生素，英国
+  <span href="https://www.secretchina.com/news/gb/tag/飞行员" target="_blank">
+   飞行员
+  </span>
+  视力大增，很可能与他们的食物有关。
+ </p>
+ <p>
+  战后，英军夜战王牌飞行员约翰･坎宁汉姆提及此事，不禁大笑起来：“截至1941年5月，我已在夜间击落12架德机，因为我的飞机上装备了极为秘密的仪器，能在夜间帮助我准确锁定德机，就像我长了一双‘猫眼’。而英国空军部为了掩饰该仪器的存在，故意编了个故事，说我们是常吃胡萝卜才厉害起来。”
+ </p>
+ <p>
+  坎宁汉姆提到的秘密仪器就是AI机载雷达，当时
+  <span href="https://www.secretchina.com/news/gb/tag/德军" target="_blank">
+   德军
+  </span>
+  只知道英军有地面预警雷达，但对AI机载雷达一无所知。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  档案显示，早在1937年，英国就研制出世界上第一部
+  <span href="https://www.secretchina.com/news/gb/tag/机载雷达" target="_blank">
+   机载雷达
+  </span>
+  ，科学家鲍恩博士领导的小组将一部小雷达安装到“安森”侦察机上，可探测到16千米外的船舶，后经改进增添了探测飞机的功能，被正式命名为“AI”。但装备了AI雷达的“安森”飞机太过落后，即便有雷达帮助，也很难与德国夜袭飞机抗衡。为了应急，英国皇家空军借用“美丽堡垒”轰炸机的机翼和后机身，研制出装备AI雷达的双发双座重型战斗机，命名为“英俊战士”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
   <strong>
-   排除他杀”
+   德军恐惧的“寂静死神”
   </strong>
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  关于“江苏大学通报学生坠楼身亡事件”，《人民日报》微博官方帐号于10月15日晚间23点55分发布通知表示，江苏大学15日通报，10月12日下午17点3分左右，该校一名就读食品与生物工程学院的学生从主A楼6楼的卫生间坠楼。经过抢救确认，该学生已无生命体症，而警方调查结论为“高空坠楼，排除他杀”。通报表示，学校对该名同学的不幸离世深感惋惜且予以哀悼，并将会全力配合警方调查及协助家长善后。
- </p>
- <p style="text-align:center">
-  <img alt="微博帐号“江苏大学袁子健的父亲”于15日晚间发文称，“大三学生冤死江苏大学”。" src="https://img3.secretchina.com/pic/2020/10-16/p2797662a209353098-ss.jpg"/>
-  <br>
-   微博帐号“江苏大学袁子健的父亲”于15日晚间发文称，“大三学生冤死江苏大学”。
-  </br>
- </p>
- <p>
-  <strong>
-   该生父亲发博文提出五大疑点 坚称“死因成谜”及“校方反应蹊跷”
-  </strong>
- </p>
- <p>
-  然而，微博帐号“江苏大学袁子健的父亲”于15日晚间8点22分、8点38分，连续发布两篇相同内容的文章，接着又于晚间9点53分发布6张该名学生的生前照片。
+  “英俊战士”名为“英俊”，但样子短粗臃肿，根本算不上英俊。坎宁汉姆说：“该机样子虽丑，威力却很大，时速可达515千米，加上自带的4门20毫米航炮和6挺航空机枪，火力超过当时任何一款战斗机。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -86,7 +143,7 @@
   </div>
  </center>
  <p>
-  至于微博文章则称，“大三学生冤死江苏大学”、“2020年10月12日17：02，袁子健在江苏大学A1栋教学楼六楼卫生间坠楼身亡。”并对该案件提出几点质疑，包括“死因成谜”、家属分析死者是“绝对不会轻生”、“手机里截止跳楼之前所有的数据都没有了”、“校方反应蹊跷”等。
+  从1940年9月开始，100架“英俊战士”战斗机装备了英军4个夜战中队。它能在AI雷达引导下悄悄接近目标，然后4门航炮同时开火，只需一个短点射就能将德国轰炸机打得凌空爆炸。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -101,55 +158,7 @@
   </div>
  </center>
  <p>
-  依该文说明，因从死者当天与母亲、学院书记、辅导员及班长等人接触期间，没有任何人看出死者具有轻生表现。此外，死者在当日上午，还曾写下了学习计划书；学院书记于晚间9点致电死者母亲，并将她骗到车上，并将她送到距离学校5公里处的锦江之星酒店八楼8811房间中，再告诉她说孩子跳楼了、没了；死者母亲要求看孩子，但遭学校两男两女强行阻拦，甚至与她爆发数次肢体冲突；死者放在裤袋里的手机因坠楼摔坏了，经警方修复后发现，手机里截止跳楼前的所有数据都没有，只剩下跳楼后，父母发给他的微信与短信。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  该文强调，结合了校方的蹊跷反应，死者家属有理由怀疑，手机内的资料“被人为删除。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  面对“死因成谜”及“校方反应蹊跷”的情况下，该文最后连续提出了五项质疑：为何不在第一时间通知死者家属，让家属见最后一面？为何要“在事发后四小时强行监禁毫不知情的死者母亲？”为何不告知家属事件细节？此案有何隐情？“江苏大学先隐瞒后拘禁死者母亲想掩盖什么？”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align:center">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/10-16/p2797663a561855713-ss.jpg"/>
-  <br>
-   微博帐号“江苏大学袁子健的父亲”于15日晚间发文称，死者当天与母亲、学院书记等人接触期间，看不出具有轻生表现，加上死者坠楼当日上午还写下学习计划书。（以上图片来源皆为微博）
-  </br>
+  “英俊战士”另一个可怕之处是发动机声音小，德军往往刚听到声音就已经进入它的射程，很快被击落了，所以德国人把“英俊战士”叫作“寂静死神”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -168,7 +177,9 @@
   </ins>
  </center>
  <p>
-  中国网友除了对此案表示哀悼、盼该生家属节哀外，也认为不该过度解释或等待调查结果即可，但另有众多网友针对学生家属的微博发文作出回应，并纷纷提出质疑，“怎么都喜欢在零点发通报？？？”、“这都三天了，还半夜发，明显是避开线民流览高峰期嘛，其用意可想而知”、“非法拘禁死者母亲，15号半夜出来个所谓的通报，如果今天不上这个热搜，真的还得了”、“真的不想微博办案，但是校方不让死者母亲与孩子见面就有问题！”、“为什么12号的事15号热搜了才通报？”、“学校的迷之操作疑点太多了”、“家属提出的疑点没有解释清楚啊”、“现在一出事反正都是不信学校”、“不要只想着封锁消息”、“其实我最想知道的是为啥我之前看到的媒体都说：孩子看了母亲一眼转身跳楼？怎么江大厕所里面有监控吗？”
+  <strong>
+   成功的关键是团队合作
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -183,7 +194,7 @@
   </div>
  </center>
  <p>
-  截止10月16日早上6点整，关键字“江苏大学”已经登上微博热搜榜首位。
+  具体到坎宁汉姆本人，他在夜战中击落20架德机，他驾驶的“英俊战士”飞机身上贴满了表示击落德机数量的“铁十字”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -198,7 +209,7 @@
   </div>
  </center>
  <p>
-  截止发稿时间，微博热搜榜上出现“江苏大学通报学生坠楼身亡事件”，排名第三位。
+  1940年11月19日，坎宁汉姆驾机拦截袭击伯明翰的德国机群，将一架Ju－88轰炸机击落，首开AI雷达引导攻击成功的记录。次年4月，坎宁汉姆的夜战生涯迎来胜利的高峰，他在一个夜晚就击落3架德机。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -213,7 +224,7 @@
   </div>
  </center>
  <p>
-  至于微博帐号“江苏大学袁子健的父亲”的介绍为“东莞市凯格精密机械有限公司 袁飞”，而博主在发布文章说明案情疑点的同时，发布自己的身分证照，并在照片上称“以上所述都是事实，如有不实，本人愿意负一切法律责任。”
+  二战结束后，有人问他如何成为夜战王牌，坎宁汉姆笑了笑：“很简单，观察员只要紧盯十字线上的绿点就行了，不需要吃很多胡萝卜。”然后，他又严肃地说：“其实，我们成功的关键是团队合作，夜战就像一座金字塔，两个人驾驶‘英俊战士’飞在高空，下面是地面引导雷达、探照灯和控制站，身处其中的每个人都要做好自己的工作，这样才能环环相扣。否则，多先进的飞机也是浪费！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -277,13 +288,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949428.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949428.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949428.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/16/949428.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/08/932501.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/949428.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p6/932501.md' width='0px' height='0px'/>
