--- a/pages/p8/954880.md
+++ b/pages/p8/954880.md
@@ -1,4 +1,4 @@
-### 若要相貌美 先要心灵美(图)
+### 鬼谷子：5种人不可深交&nbsp;(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="性格 福报 面相 品行" src="https://img3.secretchina.com/pic/2020/3-12/p2645672a505332825-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="鬼谷子 庞涓 孙膑 安禄山" src="https://img2.secretchina.com/pic/2017/7-1/p1898442a337236999-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   若要相貌美，先要心灵美。（以下图片来源：Adobe stock)
+   鬼谷子告诫：这五种人不可深交。（以下图片来源: Adobe stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,85 +21,53 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  《街对面的烛光》- 中领馆前16年7x24小时接力静坐抗议](http://141.164.51.119:10000/videos/news/../legend/index.html)
-
-#### [ 🔥  中美熱戰在即嗎？中共將如何消亡？（脑洞vs黑洞 第21集）](http://141.164.51.119:10000/videos/news/brain01.html)
-
-#### [ 🔥  《漫谈党文化》今天的共产党和过去不一样了？](http://141.164.51.119:10000/videos/news/../res/mtdwh/index.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  美貌也是一种
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/福报" target="_blank">
-    福报
+   <span href="https://www.secretchina.com/news/gb/tag/鬼谷子" target="_blank">
+    鬼谷子
    </span>
   </strong>
-  。
+  传说原名王诩，又作王禅、王利、王通，一说字诩，道号玄微子，世称鬼谷先生、王禅老祖，是大约活跃于战国中期的显赫人物，为“诸子百家”之一、纵横家的鼻祖，亦有政治家、外交官、阴阳家、预言家、教育家等身份。被世人尊称为“谋圣”。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  任何福报都有其必然的成因，就像财富来自施舍，尊贵来自谦恭一样，美丽的容颜来自柔和善良的性情。
- </p>
- <p>
-  人到中年以后，就显现出现世
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/性格" target="_blank">
-    性格
-   </span>
-  </strong>
-  影响所致的
-  <strong>
-   面相
-  </strong>
-  了。
- </p>
- <p>
-  宽厚的人多半一脸福相，性情柔和的人
-  <span href="https://www.secretchina.com/news/gb/tag/面相" target="_blank">
-   面相
+  <span href="https://zh.wikipedia.org/wiki/%E9%AC%BC%E8%B0%B7%E5%AD%90">
+   鬼谷子
   </span>
-  柔和美丽，性格格外粗暴的人总是一脸的凶相，
+  的智慧高深，识人术更是冠绝千古，他以洞若观火的智慧，看清了五种人的可怕之处，对于今天的我们依然有借鉴之处。
  </p>
  <p>
-  许多
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/品行" target="_blank">
-    品行
+   一、盛气凌人者，不可深交
+  </strong>
+ </p>
+ <p>
+  鬼谷子认为，临人以色，高人以气，胜人以言者不可深交。
+ </p>
+ <p>
+  盛气凌人的人，总是自恋自大，以自我为中心。当他遇到不如自己的人，便恃才自傲，眼高于顶；当他遇到更优秀的人，就想着如何使点手段，暗算对方。
+ </p>
+ <p>
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/庞涓" target="_blank">
+    庞涓
    </span>
   </strong>
-  不太好的中老年妇女往往一脸的刻薄相。
- </p>
- <p>
-  实际上不是生就的相貌，而是长期的心与行为的修炼在脸上的投影，这些相貌也在预示着其未来的命运。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  相术也就是一种经验积累，相由心生，由脸观心，由心知未来。
+  和
+  <strong>
+   孙膑
+  </strong>
+  都是鬼谷子的弟子，也都是足智多谋的才子。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -114,7 +82,15 @@
   </div>
  </center>
  <p>
-  那么幼年与少年、青年时期相貌的成因是什么？
+  当年
+  <span href="https://zh.wikipedia.org/wiki/%E5%BA%9E%E6%B6%93">
+   庞涓
+  </span>
+  在魏国为官，担任魏惠王的将军。他向魏惠王推荐自己的师弟
+  <span href="https://zh.wikipedia.org/wiki/%E5%AD%99%E8%86%91">
+   孙膑
+  </span>
+  ，没想到才华横溢的孙膑刚来不久，就受到了大王的喜爱。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -129,7 +105,11 @@
   </div>
  </center>
  <p>
-  相貌特征与父母的遗传因素有关，脸型身材与禀受的先天之气有关，漂亮程度是前一生带来的习气所致。
+  庞涓看到魏王与师弟畅谈，唯恐
+  <span href="https://www.secretchina.com/news/gb/tag/孙膑" target="_blank">
+   孙膑
+  </span>
+  取代自己，竟不顾兄弟情义，设计诬陷孙膑私通齐国谋反。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -144,7 +124,7 @@
   </div>
  </center>
  <p>
-  人的前半生是活在前世的影响之下，下半生更多地活在前半生的影响之下。
+  魏惠王听后勃然大怒，想要杀死孙膑泄恨，此刻庞涓又假意求情，结果孙膑同时被处以膑刑和黥刑两种酷刑，成了一个失去膝盖，又面带刺青的残废。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -159,7 +139,7 @@
   </div>
  </center>
  <p>
-  所以说，人到中年以后，要对自己的脸负责任。
+  孙膑不得已，只好装作发疯逃到了齐国，最终，孙膑在齐国闯出了自己的一番事业，并在马陵之战中亲自设计杀死了庞涓。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -173,274 +153,40 @@
    </center>
   </div>
  </center>
- <p style="text-align: center;">
-  <img alt="相貌特征与父母的遗传因素有关，脸型身材与禀受的先天之气有关，漂亮程度是前一生带来的习气所致。" src="https://img3.secretchina.com/pic/2020/7-22/p2737772a892105479-ss.jpg"/>
+ <p>
+  只容得下自己被人夸奖称赞，却丝毫见不得别人好。嫉贤妒能，又罔顾人伦，和这样的人走的太近，就是与狼共舞。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  你不如他，会被他看不起，你比他强，又会被算计陷害。遇到这种人，我们一定要尽可能的保持距离，躲得越远越好！
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align:center">
+  <img alt="阿谀奉承者，不能深交" src="https://img3.secretchina.com/pic/2020/11-9/p2814064a953402544-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   相貌特征与父母的遗传因素有关，脸型身材与禀受的先天之气有关，漂亮程度是前一生带来的习气所致。
-  </br>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  慈悲心也是一个特别重要的因素。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  比较有爱心的人，往往从内而外散发出一种过人的光华，让人越看越顺眼，越来越喜欢与其接触。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  而过于自私、狡猾、计较的人是很不耐看的，甚至丑陋。即使侥幸生得姣好的容貌，也会在脸上逐渐显现出一些不招人喜欢的地方，比如面无和气，仅是第一眼顺眼，稍多接触就毫无吸引力了。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  请相信相貌是能逐步改变，尤其是美好的相貌是会由内而外散发出一种吸引力，让见者不知不觉心生倾慕。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  很多时候，美丽与否是从看到的人心里生出来的，情人眼里出西施就是这个道理。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  所以，若要相貌美，先要心灵美。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   （01）
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  心甘情愿吃亏的人，终究吃不了亏。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  能吃亏的人，人缘必然好，人缘好的人，机会自然多。人的一生，能抓住一、二次机会，足矣！
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   （02）
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  爱占便宜的人，终究占不了便宜。捡到一棵草，失去一片森林。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  你看那些一到买单就上厕所或钱包半天掏不出来的聪明人，基本上都没啥成就。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   （03）
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  心眼小的人，天地大不了。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  朋友聚会时，三句话不离自己和自家的人，是蜗牛转世，内心空虚、自私。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  心里只有自家的事，其他的事慢慢也就与他无关。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align: center;">
-  <img alt="若要相貌美，先要心灵美。" src="https://img3.secretchina.com/pic/2020/8-5/p2747372a164313579-ss.jpg" style="height:337px; width:600px"/>
-  <br>
-   若要相貌美，先要心灵美。
+   阿谀奉承者，不能深交。
   </br>
  </p>
  <center>
@@ -457,7 +203,7 @@
  </center>
  <p>
   <strong>
-   （04）
+   二、阿谀奉承者，不能深交
   </strong>
  </p>
  <center>
@@ -473,7 +219,7 @@
   </div>
  </center>
  <p>
-  只有惜缘才能续缘。
+  鬼谷子认为，其貌曲媚，其言谀巧，饰其见物者不可深交。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -488,7 +234,359 @@
   </div>
  </center>
  <p>
-  在人生的路上，我们会遇到很多人，因为有缘才能相聚。
+  喜欢溜须拍马的人往往心机很深，他们的心中很少有真情，眼里也只有巴结权贵的机会。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  这样的人为了讨好地位比他更高的人，可以无所不用其极，与其深交会招惹灾祸。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在唐朝著名的政变
+  <span href="https://zh.wikipedia.org/wiki/%E5%AE%89%E5%8F%B2%E4%B9%8B%E4%BA%82">
+   安史之乱
+  </span>
+  中，
+  <strong>
+   安禄山
+  </strong>
+  为了巴结唐明皇和杨贵妃，不惜做了杨贵妃的义子。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  后来，
+  <span href="https://www.secretchina.com/news/gb/tag/安禄山" target="_blank">
+   安禄山
+  </span>
+  更是身穿䌽衣，扮成了孩童的模样给贵妃与皇帝跳舞，美其名曰：“䌽衣娱亲”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  然而就是这个表面上百般奉承的安禄山，私底下却默默积蓄着自己的野心。就在安史之乱爆发的时候，安禄山已经暗中掌握了大唐三分之一的精锐。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  这场兵变让杨贵妃自缢在了马嵬坡，更是让大唐的气数每况愈下。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  对那些爱说奉承的话，喜欢讨好卖乖的谄媚之人，我们一定要小心。他在口头上赞美你，心里却在利用你。这种人为了自己随时可以出卖他人，我们还是敬而远之比较安全！
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align:center">
+  <img alt="心绪不定者，不可深交。" src="https://img3.secretchina.com/pic/2020/10-26/p2804532a823462026-ss.jpg" style="height:337px; width:600px"/>
+  <br>
+   心绪不定者，不可深交。
+  </br>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   三、心绪不定者，不可深交
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  鬼谷子告诫我们，喜怒以物而心变易，乱之以事而志不治，示之以利而心迁动，慑之以威而气恇惧者不可深交。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  这种人连自己的情绪和欲望都控制不好，意志当然脆弱不堪，关键时刻会起到不好的作用。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  管宁和华歆年轻的时候是好朋友。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  有一次，俩人坐在一张席子上看书，有达官贵人乘着华美的车子从门前经过，华歆立即爬到窗口围观，言辞羡慕。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  管宁挥刀割断了席子，并且告诉华歆：“我们不是一路人，你不是我的朋友！”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  管宁终身不仕，专心治学，而华歆步入仕途之后还不安分，他三易其主，这种不忠不义的行为至今仍是被中国人所不齿。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  道不同，不相为谋。当我们发现了一个人三观不正，像管宁一样果断绝交，也是一个十分明智的选择。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align:center">
+  <img alt="贪婪胆小、愚昧顽固者，不能深交" src="https://img3.secretchina.com/pic/2020/10-17/p2798392a355479938-ss.jpg" style="height:337px; width:600px"/>
+  <br>
+   贪婪胆小、愚昧顽固者，不能深交。
+  </br>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   四、贪婪胆小、愚昧顽固者，不能深交
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  鬼谷子认为，难设以物，难说以言，思不知变，固不知改者不可深交。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  那些顽固不化，自己愚昧贪婪又听不进别人意见的人，是不可深交的。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  这种人，不管你用什么方法去劝导他，他都愚昧不开窍。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  当年晋献公想要借道虞国吞并虢国，谋士荀息劝说晋献公将自己心爱的宝马和美玉送给虞国，以此利诱。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  晋献公虽有不舍，但是也答应了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -507,7 +605,7 @@
   </ins>
  </center>
  <p>
-  亲人多半是前世的好友，好友多半是前世的亲人，给你带来烦恼的，多半是你前世伤害过的。
+  当美玉和宝马送到虞国的时候，虞国国君贪欲大发，十分高兴。谋士宫之奇看透了晋国的诡计，他不断提醒大王：
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -522,7 +620,7 @@
   </div>
  </center>
  <p>
-  因此切记：善待身边的亲人，关心身边的朋友，宽恕那些伤害你的人。
+  “虞国和虢国本是盟友，虢国被晋国毁灭了，我们的虞国也就唇亡齿寒，没有了未来。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -537,7 +635,7 @@
   </div>
  </center>
  <p>
-  这就是因果。
+  可是贪婪又顽固的虞国国君将宫之奇的良言视若无物，他不暇多想就让路给晋国，让晋国灭了自己多年的朋友虢国。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -552,9 +650,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   （05）
-  </strong>
+  虢国因为虞国的背叛灭亡了，当晋国回头反攻虞国的时候，虞国也没有了盟友的帮助，很快也走向了毁灭。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -569,7 +665,7 @@
   </div>
  </center>
  <p>
-  心中无缺叫富，被人需要叫贵。
+  贪图富贵又胆小顽固的人绝对不可深交，这种人最擅长将蠢事做绝，连累自己的朋友。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -583,40 +679,11 @@
    </center>
   </div>
  </center>
- <p>
-  快乐不是一种性格，而是一种能力。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   （06）
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  解决烦恼的最佳办法，就是忘掉烦恼。
+ <p style="text-align:center">
+  <img alt="自私自利，不顾他人者不能深交。" src="https://img3.secretchina.com/pic/2020/9-26/p2783682a341513898-ss.jpg" style="height:337px; width:600px"/>
+  <br>
+   自私自利，不顾他人者不能深交。
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -632,7 +699,7 @@
  </center>
  <p>
   <strong>
-   （07）
+   五、自私自利，不顾他人者不能深交
   </strong>
  </p>
  <center>
@@ -648,7 +715,7 @@
   </div>
  </center>
  <p>
-  笑看风云淡，坐对云起时。
+  鬼谷子认为，流言而无忌，自私而不顾，非是而强行者不可深交。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -663,7 +730,7 @@
   </div>
  </center>
  <p>
-  不争就是慈悲，不辩就是智慧，不闻就是清净，不看就是自在，原谅就是解脱，知足就是放下。
+  那些自私自利不顾其它，明知道谣言伤人还要明知故犯的人，绝对深交不得。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -678,9 +745,10 @@
   </div>
  </center>
  <p>
-  <strong>
-   （08）
-  </strong>
+  <span href="https://zh.wikipedia.org/wiki/%E5%95%86%E9%9E%85">
+   商鞅
+  </span>
+  在魏国的时候，曾经和公子卯友情深厚。商鞅变法成功，率领大军进攻魏国，魏国带兵的又恰好是公子卯。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -695,7 +763,7 @@
   </div>
  </center>
  <p>
-  不乱于心，不困于情，不畏将来，不念过往。
+  商鞅派人跟公子卯说，你我朋友一场，不应该动刀动枪，倒不如你我二人坐下来好好的喝几杯，然后直接结盟。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -710,9 +778,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   （09）
-  </strong>
+  公子卯太相信商鞅了，他离开军营与商鞅见面，商鞅却预先设好埋伏抓住了公子卯，然后发兵进攻魏军。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -727,7 +793,82 @@
   </div>
  </center>
  <p>
-  今生注定我们什么也带不走，那就活在当下、笑在当下、悟在当下吧。
+  失去了主帅的魏军一时间群龙无首，当然是惨败一场，不久后，魏国也亡了。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  这样的做派，后果也是很严重的。比如商鞅，他开始向秦孝公建议行道家之帝道、儒家之王道，孝公不听，之后才推销自己的法家霸道，孝公听之大悦。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  推进霸道政治虽然可使秦国强盛一时，但要建立商汤王、周文王、武王那样的却是不可能的。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  明知道是短期行为，但为了一时的出人头地、功名富贵也就顾不了那么多了。这样的人，实在可怕。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  鬼谷子告诫人们，有以上这五种特质的人，是绝对不可深交的。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  白云苍狗，时过境迁。鬼谷子生活的时代早已离我们远去了，可是那类小心眼，爱算计的人却始终留在你我身边。遇到有上述五种特质的人，我们千万不能深交，最好马上远离！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -759,7 +900,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -791,13 +932,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/941905.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/941905.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/941905.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/12/941905.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/954880.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/954880.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/954880.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/10/954880.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/941905.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/954880.md' width='0px' height='0px'/>
