同步于: 12月10日20时52分

--- a/pages/p6/932501.md
+++ b/pages/p6/932501.md
@@ -1,4 +1,4 @@
-### 美国女记者正直播 一只熊飞奔而来 结局出人意料(图)
+### 揭密：英军为何能在黑夜准确击落纳粹飞机？(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,52 +6,45 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="熊 记者 女记者 山火" src="https://img3.secretchina.com/pic/2020/5-12/p2688081a679670503-ss.jpg" style="height:391px; width:600px"/>
-  <span id="hideid" name="hideid" style="color:red;display:none;">
-   <span href="https://www.secretchina.com">
+ <p style="text-align:center">
+  <img alt="英俊战士战斗机。" src="https://img3.secretchina.com/pic/2020/1-5/p2597831a839975789-ss.jpg"/>
+  <br>
+   英俊战士战斗机。（图片来源：公有领域）
+   <span id="hideid" name="hideid" style="color:red;display:none;">
+    <span href="https://www.secretchina.com">
+    </span>
    </span>
-  </span>
+  </br>
  </p>
  <div id="txt-mid1-t21-2017">
   
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://158.247.195.190:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://158.247.195.190:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.195.190/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.195.190:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://158.247.195.190:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://158.247.195.190:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://158.247.195.190:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://158.247.195.190:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  《红墙的记忆》- 中南海万人和平上访纪实](http://158.247.195.190:10000/videos/news/../legend/index.html)
-
-#### [ 🔥  黨不叫我們知道的那些事](http://158.247.195.190:10000/videos/news/truth02.html)
-
-#### [ 🔥  爲何中共舉國體制造芯片難以成功 ｜「透視中國」](http://158.247.195.190:10000/videos/news/don03.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月16日讯】（看中国记者苏菲综合报导）当地时间9月12日，美国加利福尼亚州一名福克斯新闻的
+  1940年10月开始，
   <strong>
-   女记者
-  </strong>
-  在直播报道
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/加州" target="_blank">
-    加州
+   <span href="https://www.secretchina.com/news/gb/tag/纳粹" target="_blank">
+    纳粹
    </span>
-   山火
+   德军
   </strong>
-  时，一只棕色的
+  对
   <strong>
-   熊
+   英国
   </strong>
-  突然向记者飞奔而来，但记者最终改变方向，记者临危不乱淡定向前挪了几步，继续播新闻，这时大熊突然放慢了脚步，最后改变方向离开了现场。记者有惊无险躲过一劫。视频曝光后，引发网友热议。
+  展开夜间轰炸，起初由于英军战机夜战能力有限，德军轰炸机几乎为所欲为。但渐渐地，德国
+  <strong>
+   飞行员
+  </strong>
+  发现日子越来越难过，英国飞行员似乎都长了一双“猫眼”，能在黑夜里准确发现并击落德机，这到底是为什么呢？
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
@@ -59,37 +52,67 @@
  </p>
  <p>
   <strong>
-   大
-   <span href="https://www.secretchina.com/news/gb/tag/熊" target="_blank">
-    熊
-   </span>
-   向记者直奔而来 下一秒却出人意外
+   胡萝卜“造就”空中英雄？
   </strong>
  </p>
  <p>
-  据《每日邮报》13日报道，当地时间9月12日，一名女记者正在加州蒙罗维亚直播
-  <span href="https://zh.wikipedia.org/wiki/2020%E5%B9%B4%E5%8A%A0%E5%88%A9%E7%A6%8F%E5%B0%BC%E4%BA%9E%E5%B7%9E%E5%B1%B1%E7%81%AB" target="_blank">
-   山火
+  对于这个问题，不光德军想知道答案，英国老百姓也想知道。于是，负责食物供给的英国官员站出来，宣称皇家
+  <span href="https://www.secretchina.com/news/gb/tag/空军" target="_blank">
+   空军
   </span>
-  状况，一只大熊突然在远处现身，并向一位步步后退的行人靠近。记者发现这一幕后，手指这只意外闯镜的熊，兴致勃勃地向观众介绍起来。
+  飞行员吃了大量胡萝卜，正是其中的维生素使得他们的视力变得异常锐利。
  </p>
  <p>
-  不料，大熊突然回头，放弃眼前那位步步后退的行人目标，转身向记者的方向飞奔而来。这时大家都为这名
-  <span href="https://www.secretchina.com/news/gb/tag/女记者" target="_blank">
-   女记者
+  吃胡萝卜能当英雄，还有什么比这套说辞能让英国人停止抱怨肉食不够，转而心甘情愿地大嚼胡萝卜呢！一时间，伦敦街头巷尾，大家都在谈论胡萝卜的“丰功伟绩”。德国人虽然半信半疑，但也不得不接受这一解释。德国科学家认为，胡萝卜中含有大量有利于视力的维生素，英国
+  <span href="https://www.secretchina.com/news/gb/tag/飞行员" target="_blank">
+   飞行员
   </span>
-  捏一把汗，而这位女记者却临危不惧，淡定向前挪了几步，继续播新闻。
+  视力大增，很可能与他们的食物有关。
  </p>
  <p>
-  这时，熊的步伐突然慢了下来，最终改变方向，离开了现场。据了解，这名女记者名叫克里斯蒂娜・科尔曼，当时正在报道
-  <span href="https://www.secretchina.com/news/gb/tag/山火" target="_blank">
-   山火
-  </span>
-  造成西海岸至少33人死亡的新闻。
+  战后，英军夜战王牌飞行员约翰･坎宁汉姆提及此事，不禁大笑起来：“截至1941年5月，我已在夜间击落12架德机，因为我的飞机上装备了极为秘密的仪器，能在夜间帮助我准确锁定德机，就像我长了一双‘猫眼’。而英国空军部为了掩饰该仪器的存在，故意编了个故事，说我们是常吃胡萝卜才厉害起来。”
  </p>
+ <p>
+  坎宁汉姆提到的秘密仪器就是AI机载雷达，当时
+  <span href="https://www.secretchina.com/news/gb/tag/德军" target="_blank">
+   德军
+  </span>
+  只知道英军有地面预警雷达，但对AI机载雷达一无所知。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  档案显示，早在1937年，英国就研制出世界上第一部
+  <span href="https://www.secretchina.com/news/gb/tag/机载雷达" target="_blank">
+   机载雷达
+  </span>
+  ，科学家鲍恩博士领导的小组将一部小雷达安装到“安森”侦察机上，可探测到16千米外的船舶，后经改进增添了探测飞机的功能，被正式命名为“AI”。但装备了AI雷达的“安森”飞机太过落后，即便有雷达帮助，也很难与德国夜袭飞机抗衡。为了应急，英国皇家空军借用“美丽堡垒”轰炸机的机翼和后机身，研制出装备AI雷达的双发双座重型战斗机，命名为“英俊战士”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
   <strong>
-   网民热议
+   德军恐惧的“寂静死神”
   </strong>
  </p>
  <center>
@@ -105,7 +128,7 @@
   </div>
  </center>
  <p>
-  视频曝光后，引发网友热议。
+  “英俊战士”名为“英俊”，但样子短粗臃肿，根本算不上英俊。坎宁汉姆说：“该机样子虽丑，威力却很大，时速可达515千米，加上自带的4门20毫米航炮和6挺航空机枪，火力超过当时任何一款战斗机。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -120,7 +143,7 @@
   </div>
  </center>
  <p>
-  “勇敢的女生！”
+  从1940年9月开始，100架“英俊战士”战斗机装备了英军4个夜战中队。它能在AI雷达引导下悄悄接近目标，然后4门航炮同时开火，只需一个短点射就能将德国轰炸机打得凌空爆炸。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -135,37 +158,7 @@
   </div>
  </center>
  <p>
-  还有网民开玩笑说：“你看那熊样，关键时刻却自动退出，也许大火烧了它的窝，想从人类获得帮助，一看直播这阵势马上吓尿了。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “她面前两步就是一个体格硕壮的男摄像师在录她的像，熊真朝她跑来，她只要躲到男摄像师身后就会安然无恙。摄影师都没跑，她当然也不用跑啦。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  不少媒体报道这只大熊时，直接用“棕熊”一词。不过有网民对此提出质疑：
+  “英俊战士”另一个可怕之处是发动机声音小，德军往往刚听到声音就已经进入它的射程，很快被击落了，所以德国人把“英俊战士”叫作“寂静死神”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -184,38 +177,8 @@
   </ins>
  </center>
  <p>
-  “加州有棕熊吗？”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  还有看过视频的网民直接表示“这是黑熊，北美的黑熊大多数是棕色的。脸是长形的，肩膀没有肌肉鼓包，黑熊基本不主动攻击人。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
   <strong>
-   黑熊和棕熊的区别：
+   成功的关键是团队合作
   </strong>
  </p>
  <center>
@@ -231,7 +194,37 @@
   </div>
  </center>
  <p>
-  资料显示，熊可以分为两种:黑熊和粽熊。它们的区别不在颜色上，因为黑熊也有棕色的，而棕熊也有黑色的。它们的主要区别在于——棕熊的肩膀肌肉明显隆起，而黑熊却不是；而棕熊的前爪更长，颜色更浅一些。棕熊的面部下凹，而黑熊的鼻子扁平，耳朵更大、更尖。棕熊通常比黑熊体型更大，一般也认为棕熊远比黑熊更具有攻击性。
+  具体到坎宁汉姆本人，他在夜战中击落20架德机，他驾驶的“英俊战士”飞机身上贴满了表示击落德机数量的“铁十字”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  1940年11月19日，坎宁汉姆驾机拦截袭击伯明翰的德国机群，将一架Ju－88轰炸机击落，首开AI雷达引导攻击成功的记录。次年4月，坎宁汉姆的夜战生涯迎来胜利的高峰，他在一个夜晚就击落3架德机。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  二战结束后，有人问他如何成为夜战王牌，坎宁汉姆笑了笑：“很简单，观察员只要紧盯十字线上的绿点就行了，不需要吃很多胡萝卜。”然后，他又严肃地说：“其实，我们成功的关键是团队合作，夜战就像一座金字塔，两个人驾驶‘英俊战士’飞在高空，下面是地面引导雷达、探照灯和控制站，身处其中的每个人都要做好自己的工作，这样才能环环相扣。否则，多先进的飞机也是浪费！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -263,7 +256,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -295,13 +288,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/946328.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/946328.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/946328.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/16/946328.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/08/932501.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p3/946328.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p6/932501.md' width='0px' height='0px'/>
